--- a/Client/app/scripts/features/viewClientProfile/viewClientProfile.html
+++ b/Client/app/scripts/features/viewClientProfile/viewClientProfile.html
@@ -5,7 +5,7 @@
                 <img src="images/default/default-pfp.png" class="card-img-top" alt="Client profile picture">
                 <div class="card-body d-flex flex-column justify-content-center">
                     <h3 class="card-title text-center">Client Name</h3>
-                    <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#editClient">
+                    <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#editClient" ng-if="viewClientProfileCtrl.role === 'clinicAdmin'">
                         Edit client
                     </button>
                 </div>
@@ -13,71 +13,59 @@
         </div>
         <div class="col-8 border rounded">
             <h3 class="text-center mb-3">Client's info</h3>
-            <div class="row mb-3">
+            <div class="row mb-3" ng-if="viewClientProfileCtrl.username">
                 <div class="col-4">
                     Username
                 </div>
                 <div class="col-8">
-                    MarkXoan
+                    {{ viewClientProfileCtrl.username }}
                 </div>
             </div>
-            <hr>
+            <hr ng-if="viewClientProfileCtrl.username">
 
-            <div class="row mb-3">
+            <div class="row mb-3" ng-if="viewClientProfileCtrl.email">
                 <div class="col-4">
                     Email
                 </div>
                 <div class="col-8">
-                    Mark@example.com
+                    {{ viewClientProfileCtrl.email }}
                 </div>
             </div>
-            <hr>
+            <hr ng-if="viewClientProfileCtrl.email">
 
-            <div class="row mb-3">
-                <div class="col-4">
-                    Firstname
-                </div>
-                <div class="col-8">
-                    Mark
-                </div>
-            </div>
-            <hr>
-
-            <div class="row mb-3">
-                <div class="col-4">
-                    Lastname
-                </div>
-                <div class="col-8">
-                    Xoan
-                </div>
-            </div>
-            <hr>
-
-            <div class="row mb-3">
+            <div class="row mb-3" ng-if="viewClientProfileCtrl.accountStatus">
                 <div class="col-4">
                     Status
                 </div>
                 <div class="col-8">
-                    Activated
+                    {{ viewClientProfileCtrl.accountStatus }}
                 </div>
             </div>
-            <hr>
+            <hr ng-if="viewClientProfileCtrl.accountStatus">
 
-            <div class="row mb-3">
+            <div class="row mb-3" ng-if="viewClientProfileCtrl.clinicName">
                 <div class="col-4">
                     Clinic
                 </div>
                 <div class="col-8">
-                    Clinic_1
+                    {{ viewClientProfileCtrl.clinicName }}
                 </div>
             </div>
-            <hr>
+            <hr ng-if="viewClientProfileCtrl.clinicName">
         </div>
     </div>
 </div>
 
 
-<form class="modal fade" id="editClient" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+<div class="container d-flex align-items-center justify-content-center">
+  <div class="alert alert-success alert-dismissible show mb-3 w-100" id="authAlert" ng-show="adminProfileCtrl.showAlert"> 
+    <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+    <span id="authAction"></span> <strong id="authState"></strong>
+    <p id="alertMessage"></p>
+  </div>
+</div>
+
+<form class="modal fade" id="editClient" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true" ng-if="viewClientProfileCtrl.role === 'clinicAdmin'" ng-submit="viewClientProfileCtrl.clientEdit()">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -86,22 +74,22 @@
       </div>
       <div class="modal-body">
         <label for="editUsername" class="form-label">Username</label>
-        <input type="text" id="editUsername" class="form-control mb-3">
+        <input type="text" id="editUsername" class="form-control mb-3" ng-model="viewClientProfileCtrl.editusername">
 
         <label for="editEmail" class="form-label">Email</label>
-        <input type="email" id="editEmail" class="form-control mb-3">
+        <input type="email" id="editEmail" class="form-control mb-3" ng-model="viewClientProfileCtrl.editemail">
 
         <label for="editStatus" class="form-label">Status</label>
-        <select class="form-select mb-3" aria-label="Select status options" id="editStatus">
-            <option selected>Select client status</option>
+        <select class="form-select mb-3" aria-label="Select status options" id="editStatus" ng-model="viewClientProfileCtrl.editaccountStatus">
+            <option selected value=''>Select client status</option>
             <option value="deactivated">Deactivated</option>
             <option value="lock">Lock</option>
             <option value="activated">Activated</option>
             <option value="registered">Registered</option>
         </select>
 
-        <label for="editClinic" class="form-label">Clinic</label>
-        <input type="text" id="editClinic" class="form-control mb-3">
+        <label for="editClinic" class="form-label">Clinic name</label>
+        <input type="text" id="editClinic" class="form-control mb-3" ng-model="viewClientProfileCtrl.editclinicAttendedID">
 
       </div>
       <div class="modal-footer">
