--- a/Client/app/scripts/features/login/systemAdminLogin.html
+++ b/Client/app/scripts/features/login/systemAdminLogin.html
@@ -16,7 +16,7 @@
 </form>
 
 <div class="container d-flex align-items-center justify-content-center">
-  <div class="alert alert-success alert-dismissible show mb-3 w-100" id="authAlert" ng-show="systemAdminLoginCtrl.showAlert"> 
+  <div class="alert alert-success alert-dismissible fade mb-3 w-100" id="authAlert" ng-show="systemAdminLoginCtrl.showAlert"> 
     <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
     <span id="authAction"></span> <strong id="authState"></strong>
     <p id="alertMessage"></p>
