--- a/Client/app/scripts/features/adminProfile/adminProfile.html
+++ b/Client/app/scripts/features/adminProfile/adminProfile.html
@@ -61,7 +61,7 @@
 
 
 <div class="container d-flex align-items-center justify-content-center">
-  <div class="alert alert-success alert-dismissible show mb-3 w-100" id="authAlert" ng-show="adminProfileCtrl.showAlert"> 
+  <div class="alert alert-success alert-dismissible fade mb-3 w-100" id="authAlert" ng-show="adminProfileCtrl.showAlert"> 
     <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
     <span id="authAction"></span> <strong id="authState"></strong>
     <p id="alertMessage"></p>
