--- a/Client/app/scripts/features/clinicDashboard/clinicDashboard.html
+++ b/Client/app/scripts/features/clinicDashboard/clinicDashboard.html
@@ -9,7 +9,7 @@
     </button> -->
 </div>
 
-<div class="alert alert-success alert-dismissible mb-3 mt-3" id="authAlert" ng-show="clinicDashboardCtrl.showAlert"> 
+<div class="alert alert-success alert-dismissible fade mb-3 mt-3" id="authAlert" ng-show="clinicDashboardCtrl.showAlert"> 
   <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
   <span id="authAction"></span> <strong id="authState"></strong>
   <p id="alertMessage"></p>
