--- a/Client/app/scripts/features/clinicDashboard/clinicDashboard.html
+++ b/Client/app/scripts/features/clinicDashboard/clinicDashboard.html
@@ -1,4 +1,4 @@
-<div class="container-fluid vstack gap-2">
+<div class="container-fluid vstack gap-2 mb-3">
     <h1 class="card-title text-center">Clinic Dasboard</h1>
     <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#addClinicAndAdmin">
         Add Clinic and Clinic Admin
