--- a/Client/app/scripts/features/adminDashboard/adminDashboard.html
+++ b/Client/app/scripts/features/adminDashboard/adminDashboard.html
@@ -26,7 +26,7 @@
 
     <div class="hstack gap-2 justify-content-center mb-3">
         <div class="border rounded w-40 p-2">
-            <div id="userStatusPieChart"></div>
+            <div id="userRolePieChart"></div>
         </div>
 
         <div class="border rounded w-40 p-2">
@@ -37,6 +37,10 @@
     <!-- <div class="border rounded p-2">
         <div id="userRegisteredOvertimeLineChar"></div> 
     </div> Maybe not doing this --> 
+
+    <div class="border rounded p-2">
+        <div id="userStatusPieChart"></div>
+    </div>
     
 </div>
 
