--- a/Client/app/scripts/features/viewClientProfile/viewClientProfile.html
+++ b/Client/app/scripts/features/viewClientProfile/viewClientProfile.html
@@ -4,7 +4,7 @@
             <div class="card w-100">
                 <img src="images/default/default-pfp.png" class="card-img-top" alt="Client profile picture">
                 <div class="card-body d-flex flex-column justify-content-center">
-                    <h3 class="card-title text-center">Client Name</h3>
+                    <h3 class="card-title text-center">{{ viewClientProfileCtrl.username }}</h3>
                     <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#editClient" ng-if="viewClientProfileCtrl.role === 'clinicAdmin'">
                         Edit client
                     </button>
